RESOLVED FIXED294979
Headroom trait changes are not forwarded to WebProcessPool on iOS
https://bugs.webkit.org/show_bug.cgi?id=294979
Summary Headroom trait changes are not forwarded to WebProcessPool on iOS
Mike Wyrzykowski
Reported 2025-06-25 09:58:40 PDT
Headroom trait changes are not forwarded to WebProcessPool on iOS
Attachments
Radar WebKit Bug Importer
Comment 1 2025-06-25 09:58:58 PDT
Mike Wyrzykowski
Comment 2 2025-06-25 10:01:21 PDT
EWS
Comment 3 2025-06-26 02:49:29 PDT
Committed 296657@main (3fcc3d43d60d): <https://commits.webkit.org/296657@main> Reviewed commits have been landed. Closing PR #47189 and removing active labels.
WebKit Commit Bot
Comment 4 2025-06-26 07:32:47 PDT
Re-opened since this is blocked by bug 295028
Mike Wyrzykowski
Comment 5 2025-06-26 08:08:03 PDT
*** Bug 295030 has been marked as a duplicate of this bug. ***
Mike Wyrzykowski
Comment 6 2025-06-26 11:17:13 PDT
Committed 296670@main (e3f69f980c96): <https://commits.webkit.org/296670@main> Reviewed commits have been landed. Closing PR #47239 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.