Headroom trait changes are not forwarded to WebProcessPool on iOS https://bugs.webkit.org/show_bug.cgi?id=294979 radar://154305310

Reviewed by Said Abou-Hallawa.

iOS doesn't send the NSApp* notification changes, instead it
listens for trait changes on the WebView.

When this changes we need to execute the same logic macOS
runs when receiving the app-wide notification.

* Source/WebKit/UIProcess/Cocoa/WebProcessPoolCocoa.mm:
(WebKit::WebProcessPool::suppressEDR):
Track state so we only run the logic once per trait change
similar to macOS.

* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::setShouldSuppressHDR):
* Source/WebKit/UIProcess/WebProcessPool.h:

Canonical link: https://commits.webkit.org/296657@main